--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,9 @@
     width : 100%;
     gap : 18px;
 }
+.app-detail-title__content-item-rank ul li {
+    color :#FF6700;
+}
 .owl-next {
     background: none !important;
     position: absolute;
@@ -204,9 +207,15 @@
    width : 990px;
     box-shadow: 0px 0px 5px rgb(72, 72, 72);
 }
-
+.app-detail-title__content-item {
+    gap : 16px;
+}
 .app-header__flex .app-header__flex-item:nth-child(2) {
     width : 100%;
+}
+.app-bread-crumb {
+    font-size: 14px;
+    margin: 10px 0px;
 }
 .app-header__flex .app-header__flex-item:first-child {
     position: relative;
@@ -856,4 +865,125 @@ animation-duration: 2s;
 }
 .app-name-product__suggest {
     margin : 20px 0px 25px 0px;
+}
+.app-fixed-mobile__tab-bottom {
+    
+    position: fixed;
+    bottom: 0px;
+    left : 0px;
+    background: white;
+    width : 100%;
+    z-index: 2001;
+}
+.app-fixed-mobile__tab-bottom ul {
+    height : 70px;
+    display : flex;
+    justify-content: space-between;
+    padding : 10px 55px;
+    align-items: flex-end;
+}
+.app-fixed-mobile__tab-bottom li{
+ 
+    list-style: none;
+    height :auto;
+    display : flex;
+    gap : 4px;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: center;
+}
+.app-fixed-mobile__tab-bottom img {
+    width : 25px;
+    height : 25px;
+
+}
+.app-fixed-mobile__tab-bottom li span {
+    font-size: 15px;
+    font-weight: 600;
+}
+.app-fixed-mobile__detail {
+    
+    position: fixed;
+    top : 0px;
+    left : 0px;
+    width : 100%;
+    height : 100%;
+    z-index: 2000;
+    background: white;
+    display : none ;
+}
+.app-fixed-mobile__detail-left {
+    width : 100px;
+    
+    overflow: auto;
+    
+}
+.app-fixed-mobile__detail-right {
+    display: none;
+    width : 100%;
+    padding : 5px 10px;
+}
+.app-fixed-mobile__detail {
+    
+    gap : 0px;
+}
+.hidden-custom {
+    display : flex !important;
+}
+.app-fixed-mobile__detail-left ul {
+    display : flex;
+    flex-direction: column;
+    
+}
+.app-fixed-mobile__detail-left li {
+    padding : 10px 0px;
+    display : flex;
+    gap : 2px;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    border-bottom : 1px solid #eeeeee;
+}
+.app-fixed-mobile__detail-left img {
+  width : 40px;
+}
+.app-fixed-mobile__detail-left span{
+  font-size: 14px;
+}
+.app-fixed-mobile__detail-right-title {
+    display : flex;
+    align-items: center;
+    gap : 8px;
+    font-size: 15px;
+    color :#FF6700;
+    font-weight: 500;
+}
+.app-fixed-mobile__detail-right-content-item {
+    display : flex;
+    flex-direction: column;
+    gap : 5px;
+}
+.app-fixed-mobile__detail-right-content-item-title span{
+    color :#FF6700;
+    font-size: 15px;
+    font-weight: 500;
+}
+.app-fixed-mobile__detail-right-content-item ul {
+    display : flex;
+    flex-wrap: wrap;
+    gap : 10px;
+}
+.app-fixed-mobile__detail-right-content-item li {
+    list-style: none;
+    padding : 2px 10px;
+    font-size: 15px;
+    border : 1px solid #eeeeee;
+    border-radius: 15px;
+    cursor: pointer;
+}
+.app-fixed-mobile__detail-right-content {
+    display : flex;
+    margin-top : 10px;
+    flex-direction: column;
+    gap : 5px;
 }
