--- a/responsive/form.css
+++ b/responsive/form.css
@@ -101,12 +101,48 @@ body {
     .col-10 {width: 83.33% !important;}
     .col-11 {width: 91.66% !important;}
     .col-12 {width: 100% !important;}
-   
+    .app-form-container {
+        display : flex;
+        flex-direction:column-reverse;
+    }
+    .app-form-container__left {
+        width : 100%;
+    }
+    .app-form-container__right {
+        width : 100%;
+    }
+
+    .app-form-container {
+        gap : 20px;
+    }
+    .app-user-content {
+        display: block;
+        
+    }
+    
+    .app-user-content__item {
+        margin : 20px 0px;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
    
+    .app-form-container {
+        display : flex;
+        flex-direction:column-reverse;
+    }
+    .app-form-container__left {
+        width : 100%;
+    }
+    .app-form-container__right {
+        width : 100%;
+    }
+
+    .app-form-container {
+        gap : 20px;
+    }
+    
     .row>* {
         max-width: 100%;
         padding-right: calc(1.5rem * .5);
@@ -129,15 +165,39 @@ body {
     .col-sm-11 {width: 91.66%;}
     .col-sm-12 {width: 100%;}
     
+    .app-user-content {
+        display: block;
+    }
+    .app-user-content__item {
+        margin : 20px 0px;
+    }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+    .app-user-content__item {
+        margin : 20px 0px;
+    }
+    .app-user-content {
+        display: flex;
+    }
     .container {
         width : 100%;
     }
    
-  
+    .app-form-container {
+        display : flex;
+        flex-direction: row;
+    }
+    .app-form-container__left {
+        flex : 0 1 400px;
+    }
+    .app-form-container__right {
+        flex : 0 1 460px;
+    }
+    .app-form-container {
+        gap : 0px;
+    }
     
   .col-md-1 {width: 8.33%;}
   .col-md-2 {width: 16.66%;}
@@ -161,7 +221,7 @@ body {
       
     }
     
-   
+    
     .col-lg-1 {width: 8.33%;}
     .col-lg-2 {width: 16.66%;}
     .col-lg-3 {width: 25%;}
